# open-graph-next

./: CHANGELOG.md  CLAUDE.md  README.md  TODO.md  The Internet Library Consortium.md  index.html  main.js  style.css
data/: CLAUDE.md
wikidata-SIFT/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
wikidata-SIFT/.chainlink/: issues.db
wikidata-SIFT/accords/wikipedia-citation-practices/: SKILL.md
wikidata-SIFT/config/: blocked_domains.yaml  blocked_domains_eval.yaml  sift_prompt_openrouter.md
wikidata-SIFT/config/pywikibot/: .gitignore  user-config.py
wikidata-SIFT/config/searxng/: settings.yml.template
wikidata-SIFT/docs/: hard-patrol-problems.md  human-verification-guide.md  preliminary-results-2026-04.md  related-work-cite-checking-llms.md  sift-patrol-synthesis-01.md  sift-patrol-synthesis-02.md  test-results-stage1.md  wikicredcon-lightning-talk-2026.md  wikicredcon-lightning-talk-companion.md  wikidata-methodology.md
wikidata-SIFT/notebooks/: verdict_analysis.ipynb
wikidata-SIFT/scripts/: analyze_deleted.py  analyze_fp.py  analyze_test_results.py  analyze_verdicts.py  fetch_labeled_edits.py  fetch_patrol_edits.py  filter_snapshot.py  label_existing_edits.py  prefetch_search_refs.py  quick_eval.py  quick_eval_cheap.py  run_verdict_fanout.py  sift_precheck.py  tool_executor.py
wikidata-SIFT/tests/: conftest.py  test_analyze_verdicts.py  test_enrichment.py  test_entity_fetcher.py  test_label_cache.py  test_labeled_edits.py  test_serialization.py  test_sift_precheck.py  test_tool_executor.py  test_verdict_runner.py
(+174 files in other folders)
