[project]
name = "wikidata-llm-experiment"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pywikibot>=10.7",
    "pyyaml",
    "trafilatura>=2.0",
    "httpx>=0.27",
    "openai>=1.40",
    "scikit-learn>=1.6",
    "numpy>=1.26",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
